# shopify-auth-with-rust

./: .gitignore  Cargo.toml  dev.sh
src/: api_docs.rs  config.rs  main.rs
src/frontend/: .gitignore  App.jsx  index.html  index.jsx  package.json  vite.config.js  vite.config.ts
src/frontend/pages/: NotFound.jsx  index.jsx
src/handlers/: auth.rs  dashboard.rs  mod.rs
src/routes/: auth.rs  dashboard.rs
src/services/: shopify.rs
