[package]
name = "shopify-auth"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "server"
# path = "src/server.rs"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
dotenv = "0.15.0"
hyper = { version = "1.4.1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "fs", 'cors'] }
tracing = "0.1.40"
mime_guess = "2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
